v18.1/1.快速开始/4.SpreadJS 组件库.md
# modules

你可以加载SpreadJS的子库，以便在不加载所有库的情况下使用某些功能。

| **特性** | **要求的库** |
| --- | ---- |
| 核心功能 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js |
| 计算引擎 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js |
| 基本函数 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.calcengine.basicfunctions.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js |
| 高级函数 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.calcengine.advancedfunctions.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js |
| 自动合并 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.automerge.\*.\*.\*.min.js |
| 数据绑定 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.bindings.\*.\*.\*.min.js |
| 拖动填充 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.fill.\*.\*.\*.min.js |
| 筛选 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.conditionalformatting.\*.\*.\*.min.js<br>gc.spread.sheets.filter.\*.\*.\*.min.js |
| 公式文本框 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.formulatextbox.\*.\*.\*.min.js |
| 浮动对象 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.floatingobjects.\*.\*.\*.min.js |
| 分级显示 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.outlines.\*.\*.\*.min.js |
| 触摸功能 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.touch.\*.\*.\*.min.js |
| 打印 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.print.\*.\*.\*.min.js |
| 单元格类型 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.celltypes.\*.\*.\*.min.js |
| 单元格状态 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.cellstate.\*.\*.\*.min.js |
| 批注 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.comments.\*.\*.\*.min.js |
| 条件格式 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.conditionalformatting.\*.\*.\*.min.js |
| 数据验证 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.conditionalformatting.\*.\*.\*.min.js<br>gc.spread.sheets.datavalidation.\*.\*.\*.min.js |
| 搜索 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.search.\*.\*.\*.min.js |
| 迷你图 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.calcengine.basicfunctions.\*.\*.\*.min.js<br>gc.spread.calcengine.advancedfunctions.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.sparklines.\*.\*.\*.min.js |
| 表格 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js (optional, for formulas and filters)<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.bindings.\*.\*.\*.min.js (optional, for data-binding)<br>gc.spread.sheets.conditionalformatting.\*.\*.\*.min.js (optional, for filtering)<br>gc.spread.sheets.filter.\*.\*.\*.min.js (optional, for filtering)<br>gc.spread.sheets.tables.\*.\*.\*.min.js |
| 图表 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.bindings.\*.\*.\*.min.js (for data-binding)<br>gc.spread.sheets.charts.\*.\*.\*.min.js |
| 集算表 | gc.spread.common.\*.\*.\*.js<br>gc.spread.calcengine.\*.\*.\*.js<br>gc.data.\*.\*.\*.js<br>gc.spread.sheets.core.\*.\*.\*.js<br>gc.spread.sheets.calcengine.\*.\*.\*.js<br>gc.spread.sheets.bindings.\*.\*.\*.js<br>gc.spread.sheets.tables.\*.\*.\*.js<br>gc.spread.sheets.automerge.\*.\*.\*.js<br>gc.spread.sheets.cellstate.\*.\*.\*.js<br>gc.spread.sheets.statusbar.\*.\*.\*.js<br>gc.spread.sheets.conditionalformatting.\*.\*.\*.js<br>gc.spread.sheets.filter.\*.\*.\*.js<br>gc.spread.sheets.tablesheet.\*.\*.\*.js |
| 甘特表 | gc.spread.common.\*.\*.\*.js<br>gc.spread.calcengine.\*.\*.\*.js<br>gc.data.\*.\*.\*.js<br>gc.spread.sheets.core.\*.\*.\*.js<br>gc.spread.sheets.calcengine.\*.\*.\*.js<br>gc.spread.sheets.bindings.\*.\*.\*.js<br>gc.spread.sheets.tables.\*.\*.\*.js<br>gc.spread.sheets.automerge.\*.\*.\*.js<br>gc.spread.sheets.cellstate.\*.\*.\*.js<br>gc.spread.sheets.statusbar.\*.\*.\*.js<br>gc.spread.sheets.conditionalformatting.\*.\*.\*.js<br>gc.spread.sheets.filter.\*.\*.\*.js<br>gc.spread.sheets.tablesheet.\*.\*.\*.js<br>gc.spread.sheets.ganttsheet.\*.\*.\*.js |
| 拖动合并 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.dragmerge.\*.\*.\*.min.js |
| 分级列 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.outlinecolumn.\*.\*.\*.min.js |
| 上下文菜单 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.contextmenu.\*.\*.\*.min.js<br>gc.spread.sheets.bindings.\*.\*.\*.min.js (for data-binding) |
| PDF 功能 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.pdf.\*.\*.\*.min.js |
| 切片器组件 | gc.spread.common.\*.\*.\*.min.js |
| 切片器 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.conditionalformatting.\*.\*.\*.min.js<br>gc.spread.sheets.filter.\*.\*.\*.min.js<br>gc.spread.sheets.tables.\*.\*.\*.min.js<br>gc.spread.sheets.floatingobjects.\*.\*.\*.min.js<br>gc.spread.sheets.slicers.\*.\*.\*.min.js |
| 条形码 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.sparklines.\*.\*.\*.min.js<br>gc.spread.sheets.barcode.\*.\*.\*.min.js |
| 形状 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.calcengine.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.floatingobjects.\*.\*.\*.min.js<br>gc.spread.sheets.shapes.\*.\*.\*.min.js |
| 超链接 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.hyperlink.\*.\*.\*.js |
| 名称框 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.namebo\*.\*.\*.x.js |
| 状态栏 | gc.spread.common.\*.\*.\*.min.js<br>gc.spread.sheets.core.\*.\*.\*.min.js<br>gc.spread.sheets.statusbar.\*.\*.\*.js |

核心的 JavaScript 文件必须始终加载。若要使用函数，必须首先加载计算引擎的 JavaScript 文件。许多功能都要用到计算引擎的 JavaScript 文件，所以你可能需要先加载它。如果你使用的函数来自尚未加载的 JavaScript 文件，该函数将不会生效。
这些 JavaScript 文件位于 SpreadJS 主脚本文件夹下的 “pluggable” 文件夹中。

## 使用 SpreadJS 基本功能

以下代码示例展示如何使用 SpreadJS 的基本功能。

```JavaScript
<!DOCTYPE html>
<html>
<head>
    <title>SpreadJS Pluggable Sample</title>
    <link type="text/css" href="./css/gc.spread.sheets.x.x.x.css" rel="stylesheet"/>
    <!--SpreadJS pluggable common function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.common.x.x.x.min.js"></script>
    <!--SpreadJS pluggable core function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.core.x.x.x.min.js"></script>
    <script>
        // The Spread definition and most UI behavior is in the SpreadJS core library.
        window.onload = function () {
            var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
            var sheet = spread.getActiveSheet();
            sheet.setValue(0, 0, 20);
        };
    </script>
</head>
<body>
    <div id="ss" style="width:800px; height:600px; border: 1px solid gray;"></div>
</body>
</html>
```

## 使用基本计算函数

以下代码示例展示如何在 Spread 工作表中使用基本计算函数。

```JavaScript
<!DOCTYPE html>
<html>
<head>
    <title>SpreadJS Pluggable Sample</title>
    <link type="text/css" href="./css/gc.spread.sheets.x.x.x.css" rel="stylesheet"/>
    <!--SpreadJS pluggable common function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.common.x.x.x.min.js"></script>
    <!--SpreadJS pluggable calcengine function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.calcengine.x.x.x.min.js"></script>
    <!--SpreadJS pluggable calcengine basic function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.calcengine.basicfunctions.x.x.x.min.js"></script>
    <!--SpreadJS pluggable core function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.core.x.x.x.min.js"></script>
    <script>      
        window.onload = function () {
            var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
            var sheet = spread.getActiveSheet();
            sheet.setArray(0, 0, [1, 2, 3, 4, 5]);
            sheet.setFormula(5, 1, 'SUM(A1,A5)');
        };
    </script>
</head>
<body>
    <div id="ss" style="width:800px; height:600px; border: 1px solid gray;"></div>
</body>
</html>
```

## 使用计算和高级函数

以下代码示例展示如何使用计算和高级函数。

```JavaScript
<!DOCTYPE html>
<html>
<head>
    <title>SpreadJS Pluggable Sample</title>
    <link type="text/css" href="./css/gc.spread.sheets.x.x.x.css" rel="stylesheet"/>
    <!--SpreadJS pluggable common function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.common.x.x.x.min.js"></script>
    <!--SpreadJS pluggable calcengine function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.calcengine.x.x.x.min.js"></script>
    <!--SpreadJS pluggable calcengine advanced function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.calcengine.advancedfunctions.x.x.x.min.js"></script>
    <!--SpreadJS pluggable core function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.core.x.x.x.min.js"></script>
    <script>
        window.onload = function () {
            var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
            var activeSheet = spread.getActiveSheet();
            activeSheet.setValue(0, 0, 1);
            activeSheet.setValue(1, 0, 10);
            activeSheet.setValue(2, 0, 7);
            activeSheet.setValue(3, 0, 9);
            activeSheet.setValue(4, 0, "a1");
            activeSheet.setFormula(5, 0, "MAX(A1:A5)");
        };
    </script>
</head>
<body>
    <div id="ss" style="width:800px; height:600px; border: 1px solid gray;"></div>
</body>
</html>
```

## 使用绑定函数

以下代码示例展示如何使用绑定函数。

```JavaScript
<!DOCTYPE html>
<html>
<head>
    <title>SpreadJS Pluggable Sample</title>
<link type="text/css" href="./css/gc.spread.sheets.x.x.x.css" rel="stylesheet"/>
    <!--SpreadJS pluggable common function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.common.x.x.x.min.js"></script>
    <!--SpreadJS pluggable core function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.core.x.x.x.min.js"></script>
    <!--SpreadJS pluggable data binding library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.bindings.x.x.x.min.js"></script>
    <script>
        window.onload = function () {
            var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
            var activeSheet = spread.getActiveSheet();
             var people = [
                 { name: "Albert", isAdult: false, country: "American", website: "albert.com" },
                 { name: "Alice", isAdult: true, country: "China", website: "alice.com" },
                 { name: "Bob", isAdult: false, country: "Canada", website: "bob.com" }
             ];
             activeSheet.autoGenerateColumns = true;
             activeSheet.setDataSource(people);
        };
    </script>
</head>
<body>
    <div id="ss" style="width:800px; height:600px; border: 1px solid gray;"></div>
</body>
</html>
```

## 使用公式文本框

以下代码示例展示如何使用公式文本框。

```JavaScript
<!DOCTYPE html>
<html>
<head>
    <title>SpreadJS Pluggable Sample</title>
    <link type="text/css" href="./css/gc.spread.sheets.x.x.x.css" rel="stylesheet"/>
    <!--SpreadJS pluggable common function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.common.x.x.x.min.js"></script>
    <!--SpreadJS pluggable calcengine function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.calcengine.x.x.x.min.js"></script>
    <!--SpreadJS pluggable core function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.core.x.x.x.min.js"></script>
    <!--SpreadJS pluggable formula text box function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.formulatextbox.x.x.x.min.js"></script>
    <script>
        // The formula text box function is in the Spread formula tex box library. 
        window.onload = function () {
            var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
            var sheet = spread.getActiveSheet();
            sheet.setArray(0, 0, [1, 2, 3, 4, 5]);
            var fbx = new GC.Spread.Sheets.FormulaTextBox.FormulaTextBox(document.getElementById("formulaTextBox"));
            fbx.workbook(spread);
        };
    </script>
</head>
<body>
    <div id="ss" style="width:800px; height:600px; border: 1px solid gray;"></div>
    <input type="text" id="formulaTextBox" />
</body>
</html>
```

## 使用批注函数

以下代码示例展示如何使用批注函数。

```JavaScript
<!DOCTYPE html>
<html>
<head>
    <title>SpreadJS Pluggable Sample</title>
    <link type="text/css" href="./css/gc.spread.sheets.x.x.x.css" rel="stylesheet"/>
    <!--SpreadJS pluggable common function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.common.x.x.x.min.js"></script>
    <!--SpreadJS pluggable core function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.core.x.x.x.min.js"></script>
    <!--SpreadJS pluggable comment library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.comments.x.x.x.min.js"></script>
    <script>
        window.onload = function () {
            var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
            var activeSheet = spread.getActiveSheet();
            var comment = new GC.Spread.Sheets.Comments.Comment();
            comment.text("new comment!");
            comment.backColor("yellow");
            comment.foreColor("green");
            comment.displayMode(GC.Spread.Sheets.Comments.DisplayMode.alwaysShown);
            activeSheet.getCell(5,5).comment(comment);
        };
    </script>
</head>
<body>
    <div id="ss" style="width:800px; height:600px; border: 1px solid gray;"></div>
    <input type="text" id="formulaTextBox" />
</body>
</html>
```

## 使用浮动对象函数

以下代码示例展示如何使用浮动对象函数。

```JavaScript
<!DOCTYPE html>
<html>
<head>
    <title>SpreadJS Pluggable Sample</title>
    <link type="text/css" href="./css/gc.spread.sheets.x.x.x.css" rel="stylesheet"/>
    <!--SpreadJS pluggable common function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.common.x.x.x.min.js"></script>
    <!--SpreadJS pluggable core function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.core.x.x.x.min.js"></script>
   <!--SpreadJS pluggable floating objects function library-->
    <script type="text/javascript" src="./scripts/pluggable/gc.spread.sheets.floatingobjects.x.x.x.min.js"></script>
    <script>
        window.onload = function () {
            var spread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
            var activeSheet = spread.getActiveSheet();
            var customFloatingObject = new GC.Spread.Sheets.FloatingObjects.FloatingObject("f1", 100, 100, 60, 64);
            var btn = document.createElement('button');
            btn.style.width = "60px";
            btn.style.height = "30px";
            btn.innerText = "button";
            customFloatingObject.content(btn);
            activeSheet.floatingObjects.add(customFloatingObject);
        };
    </script>
</head>
<body>
    <div id="ss" style="width:800px; height:600px; border: 1px solid gray;"></div>
    <input type="text" id="formulaTextBox" />
</body>
</html>
```